--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -72,25 +72,22 @@
         <div class="btn">
             <div>Авторы</div>
             <div class="sup_menu">
-                <div><a href="">редактировать автора</a></div>
-                <div><a href="">добавить автора</a></div>
-                <div><a href="">удалить автора</a></div>
+                <div><a href="/addAuthor">добавить автора</a></div>
+                <div><a href="/deleteAuthor">удалить автора</a></div>
             </div>
         </div>
         <div class="btn">
             <div>Жанры</div>
             <div class="sup_menu">
-                <div><a href="">редактировать жанр</a></div>
-                <div><a href="">добавить жанр</a></div>
-                <div><a href="">удалить жанр</a></div>
+                <div><a href="/addGenre">добавить жанр</a></div>
+                <div><a href="/deleteGenre">удалить жанр</a></div>
             </div>
         </div>
         <div class="btn">
             <div class="category">Книги</div>
             <div class="sup_menu">
-                <div><a href="">редактировать книгу</a></div>
                 <div><a href="/addBook">добавить книгу</a></div>
-                <div><a href="">удалить книгу</a></div>
+                <div><a href="/deleteBook">удалить книгу</a></div>
             </div>
         </div>
     </div>
