--- a/src/main/resources/templates/deleteGenre.html
+++ b/src/main/resources/templates/deleteGenre.html
@@ -167,7 +167,7 @@
                 <div class="price">
                     <form action="/deleteGenre" class="add_basket" method="post">
                         <input type="hidden" name="id" th:value="${genre.getId}">
-                        <button type="submit" class="add_btn">
+                        <button type="submit" class="add_btn" style="width: 100px">
                             <b>Удалить</b>
                         </button>
                     </form>
