--- a/src/main/resources/templates/addAuthor.html
+++ b/src/main/resources/templates/addAuthor.html
@@ -15,10 +15,12 @@
         }
 
         .menu {
+            padding: 10px;
+            height: 5vh;
             border-radius: 20px;
             margin-right: 5px;
             background-color: white;
-            width: 10vw;
+            width: 5vw;
             text-align: center;
         }
 
@@ -139,6 +141,11 @@
 </head>
 <body>
 <div class="container">
+    <a href="/books">
+        <div class="menu">
+            Выйти
+        </div>
+    </a>
     <div class="main">
         <b>Добавить автора</b>
         <div class="line"></div>
