--- a/src/main/resources/templates/deleteAuthor.html
+++ b/src/main/resources/templates/deleteAuthor.html
@@ -158,6 +158,11 @@
 </head>
 <body>
 <div class="container">
+    <a href="/books">
+        <div class="menu">
+            Выйти
+        </div>
+    </a>
     <div class="main">
         <b>Все авторы</b>
         <div class="line"></div>
