--- a/src/main/resources/templates/deleteBook.html
+++ b/src/main/resources/templates/deleteBook.html
@@ -19,11 +19,11 @@
 
         .menu {
             padding: 10px;
-            height: 30vh;
+            height: 5vh;
             border-radius: 20px;
             margin-right: 5px;
             background-color: white;
-            width: 10vw;
+            width: 5vw;
             text-align: center;
         }
 
@@ -158,6 +158,11 @@
 </head>
 <body>
 <div class="container">
+    <a href="/books">
+        <div class="menu">
+            Выйти
+        </div>
+    </a>
     <div class="main">
         <b>Все авторы</b>
         <div class="line"></div>
