--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -216,7 +216,7 @@
         <div class="line"></div>
         <div class="count" th:text="'Книг в корзине: ' + ${size}"></div>
         <div class="sum" th:text="'Итоговая сумма: ' + ${sum}"></div>
-        <a href="/basket" target="blank">
+        <a href="/basket">
             <div class="basket_btn">В корзину</div>
         </a>
     </div>
