--- a/src/main/resources/templates/basket.html
+++ b/src/main/resources/templates/basket.html
@@ -5,89 +5,104 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        body{
+        body {
             background-color: #62DA97;
             font-size: 2vmin;
         }
 
-        .container{
-            display:flex;
-            justify-content:center;
+        .container {
+            display: flex;
+            justify-content: center;
 
         }
 
 
-        .main{
-            padding:10px;
-            text-align:center;
-            border-radius:20px;
-            display:inline-block;
+        .main {
+            padding: 10px;
+            text-align: center;
+            border-radius: 20px;
+            display: inline-block;
             width: 70vw;
             background-color: white;
         }
 
 
-
-        .line{
-            display:block;
+        .line {
+            display: block;
             background-color: black;
             width: 100%;
             height: 1px;
         }
 
 
-        header{
+        header {
             text-align: center;
             margin-bottom: 5px;
         }
 
-        .prod{
+        .prod {
             display: flex;
-            width:100%;
+            width: 100%;
         }
 
-        .prod:hover{
-            background-color:#E1D9D1;
+        .prod:hover {
+            background-color: #E1D9D1;
         }
 
-        .name_prod{
-            font-size:2vmin;
-            width:70%
+        .name_prod {
+            font-size: 2vmin;
+            width: 70%
         }
 
-        .price{
-            width:30%;
-        }
-
-
-        .sup_price{
-            width:100%;
-            height:50%;
-            font-size:2vmin;
+        .price {
+            width: 30%;
         }
 
 
+        .sup_price {
+            width: 100%;
+            height: 50%;
+            font-size: 2vmin;
+        }
 
-        .add_btn{
-            width:100%;
-            height:100%;
+
+        .add_btn {
+            width: 100%;
+            height: 100%;
             background-color: #62DA97;
         }
 
 
-        a{
-            text-decoration:none;
-            color:black;
+        a {
+            text-decoration: none;
+            color: black;
         }
 
-        .prod{
-            padding:5px;
+        .prod {
+            padding: 5px;
         }
+
+        .menu {
+            padding: 10px;
+            height: 10vh;
+            border-radius: 20px;
+            margin-right: 5px;
+            background-color: white;
+            width: 5vw;
+            text-align: center;
+        }
+
     </style>
     <title>Корзина</title>
 </head>
 <body>
 <div class="container">
+
+    <a href="/books">
+        <div class="menu">
+            Выйти
+        </div>
+    </a>
     <div class="main">
         <b>Корзина</b>
         <div class="line"></div>
