--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -148,7 +148,7 @@
             padding: 5px;
         }
 
-        .name, .descr, .publsh_hus, .date_of_writing, .page_size, .age_limit,.author,.genre {
+        .name, .descr, .publsh_hus, .date_of_writing, .page_size, .age_limit, .author, .genre {
             text-align: left;
             margin: 10px;
         }
@@ -224,7 +224,7 @@
         <div class="sum" th:text="'Итоговая сумма: ' + ${sum}">
             Итоговая сумма:
         </div>
-        <a href="/basket" target="_blank">
+        <a href="/basket">
             <div class="basket_btn">В корзину</div>
         </a>
     </div>
