--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -214,7 +214,7 @@
         <div class="line"></div>
         <div class="count" th:text="'Книг в корзине: ' + ${size}"></div>
         <div class="sum" th:text="'Итоговая сумма: ' + ${sum}"></div>
-        <a href="/basket" target="_blank">
+        <a href="/basket">
             <div class="basket_btn">В корзину</div>
         </a>
     </div>
